--- a/classwork/api-app/backend/requirements.txt
+++ b/classwork/api-app/backend/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi==0.109.0
+uvicorn==0.27.0
+pydantic==2.5.3
 python-dotenv==1.0.0
-httpx==0.25.1
-python-jose==3.3.0
-pydantic==2.4.2
+sqlalchemy==2.0.25
 python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
